ADD: Se agrega configuracion de feedback.

--- a/express-delivery-angular/express-delivery-web/src/app/commerce/commerce.component.html
+++ b/express-delivery-angular/express-delivery-web/src/app/commerce/commerce.component.html
@@ -41,8 +41,8 @@
 
 
       <div class="mt-10">
-        <textarea formControlName="description"  class="single-textarea" placeholder="Descripción del comercio" onfocus="this.placeholder = ''"
-          onblur="this.placeholder = 'Descripción del comercio'" required></textarea>
+        <textarea formControlName="description"  class="single-textarea" placeholder="Descripción del comercio. Ejemplo: Reseña, horarios, cobertura, etc." onfocus="this.placeholder = ''"
+          onblur="this.placeholder = 'Descripción del comercio. Ejemplo: Reseña, horarios, cobertura, etc.'" required></textarea>
       </div>
 
 
@@ -61,9 +61,10 @@
       </div>
 
       <div class="mt-10">
-        <input type="text" formControlName="facebook"  placeholder="Ingrese url de facebook"
-          onfocus="this.placeholder = ''" onblur="this.placeholder = 'Ingrese url de facebook'" required
+        <input type="text" formControlName="facebook"  placeholder="Ingrese url de facebook (Opcional)"
+          onfocus="this.placeholder = ''" onblur="this.placeholder = 'Ingrese url de facebook (Opcional)'" required
           class="single-input">
+          <span style="font-size: 10px;" ><strong>Ejemplo:</strong> https://www.facebook.com/tiendaluz</span>
       </div>
 
       <div class="mt-10 switch-wrap d-flex justify-content-between">
