--- a/express-delivery-angular/express-delivery-web/src/app/header/header.component.html
+++ b/express-delivery-angular/express-delivery-web/src/app/header/header.component.html
@@ -19,7 +19,7 @@
                                     <ul id="navigation">                                                                                                                                     
                                         <li><a routerLink="/home">Inicio</a></li>
                                         <li><a routerLink="/shop">Ir de compras</a></li>
-                                        <li><a routerLink="/jobs">Servicios</a></li>
+                                        <!--li><a routerLink="/jobs">Servicios</a></li-->
                                         <li><a routerLink="/commerce">Nuevo comercio</a></li>                                        
                                         <li><a routerLink="/about">Acerca de...</a></li>                                        
                                     </ul>
