--- a/express-delivery-angular/express-delivery-web/src/app/main/main.component.html
+++ b/express-delivery-angular/express-delivery-web/src/app/main/main.component.html
@@ -34,8 +34,12 @@
                               </div><br>
 
                               <div class="slider-btns">
+                                <a data-animation="fadeInLeft" data-delay="1s" routerLink="/feed-back" class="btn radius-btn">Dejanos tus comentarios</a>
+                              </div><br>                              
+
+                              <!--div class="slider-btns">
                                 <a data-animation="fadeInLeft" data-delay="1s" routerLink="/jobs" class="btn radius-btn">Ofrecer mis servicios</a>
-                              </div><br>
+                              </div><br-->
 
                           </div>
                       </div>
@@ -116,7 +120,8 @@
                         </div>
                         <div class="services-cap">
                             <h3><a routerLink="/commerce">Postula un comercio</a></h3>
-                            <p>
+                            <p>                                
+                                
                               Si sabes de alguien que tiene un comercio, tu mismo puedes postularlo y ayudarlo a que mas personas lo conozcan.
                             </p>
                             <a routerLink="/commerce" class="get-btn"><i class="ti-arrow-right"></i> Nuevo comercio</a>
@@ -129,7 +134,7 @@
             </div>              
               <div class="col-lg-4 col-md-6 col-sm-6">
                   <div class="services-wrapper mb-50">
-                      <div class="single-services">
+                      <!--div class="single-services">
                           <div class="services-icon">
                             <img style="height: 50px;" alt='shop' src='assets/img/store/employment.svg'>
                           </div>
@@ -145,7 +150,7 @@
                       </div>
                       <div class="services-shape">
                           <span>03</span>
-                      </div>
+                      </div-->
                   </div>
               </div>
           </div>
@@ -154,3 +159,11 @@
 
 </main>
 
+
+<a target="_blank" href="https://www.facebook.com/gtexpressdelivery"  class="facebook" target="_blank"> 
+    <img class="facebook-icon" style="height: 20px;" alt='shop' src='assets/img/store/fb.svg'>
+</a>                              
+
+<a href="https://www.facebook.com/sharer/sharer.php?u=https://www.facebook.com/gtexpressdelivery" target="_blank" class="share">
+    <img class="facebook-icon" style="height: 20px;" alt='shop' src='assets/img/store/share.svg'>
+</a>
