--- a/express-delivery-angular/express-delivery-web/src/app/shop-category/shop-category.component.html
+++ b/express-delivery-angular/express-delivery-web/src/app/shop-category/shop-category.component.html
@@ -47,7 +47,7 @@
                 <div class="col-lg-8 mb-5 mb-lg-0">
                     <div class="blog_left_sidebar">
 
-                        <article class="blog_item" *ngFor='let s of shops' [routerLink]="['/shop-detail/' + s.dbid]">
+                        <article class="blog_item" *ngFor='let s of shops' [routerLink]="['/shop-detail/' + s.token]">
                             <div class="blog_item_img">
                                 <img class="card-img rounded-0" style="height: 150px;" src={{src}}{{s.image}} alt="">
                                 <a class="blog_item_date">
